// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`PickerSelect renders correctly with default props 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "editable": false,
                "multiline": true,
                "style": {
                  "color": "#1C1C1C",
                  "flex": 1,
                  "minWidth": 0,
                },
                "testID": "text_input",
                "value": "Select an option",
              },
              "type": "TextInput",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "style": {
                  "pointerEvents": "none",
                },
                "testID": "icon_container",
              },
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
              "pointerEvents": "box-only",
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "disabled": false,
        "onPress": [Function],
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
          "width": "100%",
        },
        "testID": "ios_touchable_wrapper",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": null,
          "props": {
            "aria-role": "button",
            "onPress": [Function],
            "style": {
              "flex": 1,
            },
            "testID": "ios_modal_top",
          },
          "type": "Pressable",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "style": {
                  "flexDirection": "row",
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        "Done",
                      ],
                      "props": {
                        "allowFontScaling": false,
                        "style": [
                          {
                            "color": "#007aff",
                            "fontSize": 17,
                            "fontWeight": "600",
                            "paddingRight": 11,
                            "paddingTop": 1,
                          },
                          {},
                        ],
                        "testID": "done_text",
                      },
                      "type": "Text",
                    },
                  ],
                  "props": {
                    "style": undefined,
                    "testID": "needed_for_touchable",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "hitSlop": {
                  "bottom": 4,
                  "left": 4,
                  "right": 4,
                  "top": 4,
                },
                "onPress": [Function],
                "onPressIn": [Function],
                "onPressOut": [Function],
                "testID": "done_button",
              },
              "type": "Pressable",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "backgroundColor": "#f8f8f8",
              "borderTopColor": "#dedede",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "height": 45,
              "justifyContent": "space-between",
              "paddingHorizontal": 10,
              "zIndex": 2,
            },
            "testID": "input_accessory_view",
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Select an option",
                    "value": "",
                  },
                  "type": "Picker.Item",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Option 1",
                    "value": "1",
                  },
                  "type": "Picker.Item",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Option 2",
                    "value": "2",
                  },
                  "type": "Picker.Item",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Option 3",
                    "value": "3",
                  },
                  "type": "Picker.Item",
                },
              ],
              "props": {
                "onValueChange": [Function],
                "selectedValue": "",
                "testID": "ios_picker",
              },
              "type": "Picker",
            },
          ],
          "props": {
            "style": [
              {
                "backgroundColor": "#d0d4da",
                "justifyContent": "center",
              },
              {
                "height": 215,
              },
            ],
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "animationType": undefined,
        "onOrientationChange": [Function],
        "supportedOrientations": [
          "portrait",
          "landscape",
        ],
        "testID": "ios_modal",
        "transparent": true,
        "visible": false,
      },
      "type": "Modal",
    },
  ],
  "props": {
    "style": [
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "minHeight": 40,
        "width": "100%",
      },
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#949494",
      },
      false,
    ],
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`PickerSelect renders with selected value 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "editable": false,
                "multiline": true,
                "style": {
                  "color": "#1C1C1C",
                  "flex": 1,
                  "minWidth": 0,
                },
                "testID": "text_input",
                "value": "Option 2",
              },
              "type": "TextInput",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "style": {
                  "pointerEvents": "none",
                },
                "testID": "icon_container",
              },
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
              "pointerEvents": "box-only",
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "disabled": false,
        "onPress": [Function],
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
          "width": "100%",
        },
        "testID": "ios_touchable_wrapper",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": null,
          "props": {
            "aria-role": "button",
            "onPress": [Function],
            "style": {
              "flex": 1,
            },
            "testID": "ios_modal_top",
          },
          "type": "Pressable",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "style": {
                  "flexDirection": "row",
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        "Done",
                      ],
                      "props": {
                        "allowFontScaling": false,
                        "style": [
                          {
                            "color": "#007aff",
                            "fontSize": 17,
                            "fontWeight": "600",
                            "paddingRight": 11,
                            "paddingTop": 1,
                          },
                          {},
                        ],
                        "testID": "done_text",
                      },
                      "type": "Text",
                    },
                  ],
                  "props": {
                    "style": undefined,
                    "testID": "needed_for_touchable",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "hitSlop": {
                  "bottom": 4,
                  "left": 4,
                  "right": 4,
                  "top": 4,
                },
                "onPress": [Function],
                "onPressIn": [Function],
                "onPressOut": [Function],
                "testID": "done_button",
              },
              "type": "Pressable",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "backgroundColor": "#f8f8f8",
              "borderTopColor": "#dedede",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "height": 45,
              "justifyContent": "space-between",
              "paddingHorizontal": 10,
              "zIndex": 2,
            },
            "testID": "input_accessory_view",
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Select an option",
                    "value": "",
                  },
                  "type": "Picker.Item",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Option 1",
                    "value": "1",
                  },
                  "type": "Picker.Item",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Option 2",
                    "value": "2",
                  },
                  "type": "Picker.Item",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Option 3",
                    "value": "3",
                  },
                  "type": "Picker.Item",
                },
              ],
              "props": {
                "onValueChange": [Function],
                "selectedValue": "2",
                "testID": "ios_picker",
              },
              "type": "Picker",
            },
          ],
          "props": {
            "style": [
              {
                "backgroundColor": "#d0d4da",
                "justifyContent": "center",
              },
              {
                "height": 215,
              },
            ],
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "animationType": undefined,
        "onOrientationChange": [Function],
        "supportedOrientations": [
          "portrait",
          "landscape",
        ],
        "testID": "ios_modal",
        "transparent": true,
        "visible": false,
      },
      "type": "Modal",
    },
  ],
  "props": {
    "style": [
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "minHeight": 40,
        "width": "100%",
      },
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#949494",
      },
      false,
    ],
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`PickerSelect renders disabled state 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "editable": false,
                "multiline": true,
                "style": {
                  "color": "#686868",
                  "flex": 1,
                  "minWidth": 0,
                },
                "testID": "text_input",
                "value": "Select an option",
              },
              "type": "TextInput",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "style": {
                  "pointerEvents": "none",
                },
                "testID": "icon_container",
              },
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
              "pointerEvents": "box-only",
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "disabled": true,
        "onPress": [Function],
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
          "width": "100%",
        },
        "testID": "ios_touchable_wrapper",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": null,
          "props": {
            "aria-role": "button",
            "onPress": [Function],
            "style": {
              "flex": 1,
            },
            "testID": "ios_modal_top",
          },
          "type": "Pressable",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "style": {
                  "flexDirection": "row",
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        "Done",
                      ],
                      "props": {
                        "allowFontScaling": false,
                        "style": [
                          {
                            "color": "#007aff",
                            "fontSize": 17,
                            "fontWeight": "600",
                            "paddingRight": 11,
                            "paddingTop": 1,
                          },
                          {},
                        ],
                        "testID": "done_text",
                      },
                      "type": "Text",
                    },
                  ],
                  "props": {
                    "style": undefined,
                    "testID": "needed_for_touchable",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "hitSlop": {
                  "bottom": 4,
                  "left": 4,
                  "right": 4,
                  "top": 4,
                },
                "onPress": [Function],
                "onPressIn": [Function],
                "onPressOut": [Function],
                "testID": "done_button",
              },
              "type": "Pressable",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "backgroundColor": "#f8f8f8",
              "borderTopColor": "#dedede",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "height": 45,
              "justifyContent": "space-between",
              "paddingHorizontal": 10,
              "zIndex": 2,
            },
            "testID": "input_accessory_view",
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Select an option",
                    "value": "",
                  },
                  "type": "Picker.Item",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Option 1",
                    "value": "1",
                  },
                  "type": "Picker.Item",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Option 2",
                    "value": "2",
                  },
                  "type": "Picker.Item",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Option 3",
                    "value": "3",
                  },
                  "type": "Picker.Item",
                },
              ],
              "props": {
                "onValueChange": [Function],
                "selectedValue": "",
                "testID": "ios_picker",
              },
              "type": "Picker",
            },
          ],
          "props": {
            "style": [
              {
                "backgroundColor": "#d0d4da",
                "justifyContent": "center",
              },
              {
                "height": 215,
              },
            ],
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "animationType": undefined,
        "onOrientationChange": [Function],
        "supportedOrientations": [
          "portrait",
          "landscape",
        ],
        "testID": "ios_modal",
        "transparent": true,
        "visible": false,
      },
      "type": "Modal",
    },
  ],
  "props": {
    "style": [
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "minHeight": 40,
        "width": "100%",
      },
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#949494",
      },
      {
        "backgroundColor": "#CDCDCD",
      },
    ],
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`PickerSelect renders without placeholder when placeholder is empty object 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "editable": false,
                "multiline": true,
                "style": {
                  "color": "#1C1C1C",
                  "flex": 1,
                  "minWidth": 0,
                },
                "testID": "text_input",
                "value": "Option 1",
              },
              "type": "TextInput",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "style": {
                  "pointerEvents": "none",
                },
                "testID": "icon_container",
              },
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
              "pointerEvents": "box-only",
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "disabled": false,
        "onPress": [Function],
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
          "width": "100%",
        },
        "testID": "ios_touchable_wrapper",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": null,
          "props": {
            "aria-role": "button",
            "onPress": [Function],
            "style": {
              "flex": 1,
            },
            "testID": "ios_modal_top",
          },
          "type": "Pressable",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "style": {
                  "flexDirection": "row",
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        "Done",
                      ],
                      "props": {
                        "allowFontScaling": false,
                        "style": [
                          {
                            "color": "#007aff",
                            "fontSize": 17,
                            "fontWeight": "600",
                            "paddingRight": 11,
                            "paddingTop": 1,
                          },
                          {},
                        ],
                        "testID": "done_text",
                      },
                      "type": "Text",
                    },
                  ],
                  "props": {
                    "style": undefined,
                    "testID": "needed_for_touchable",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "hitSlop": {
                  "bottom": 4,
                  "left": 4,
                  "right": 4,
                  "top": 4,
                },
                "onPress": [Function],
                "onPressIn": [Function],
                "onPressOut": [Function],
                "testID": "done_button",
              },
              "type": "Pressable",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "backgroundColor": "#f8f8f8",
              "borderTopColor": "#dedede",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "height": 45,
              "justifyContent": "space-between",
              "paddingHorizontal": 10,
              "zIndex": 2,
            },
            "testID": "input_accessory_view",
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Option 1",
                    "value": "1",
                  },
                  "type": "Picker.Item",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Option 2",
                    "value": "2",
                  },
                  "type": "Picker.Item",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Option 3",
                    "value": "3",
                  },
                  "type": "Picker.Item",
                },
              ],
              "props": {
                "onValueChange": [Function],
                "selectedValue": "1",
                "testID": "ios_picker",
              },
              "type": "Picker",
            },
          ],
          "props": {
            "style": [
              {
                "backgroundColor": "#d0d4da",
                "justifyContent": "center",
              },
              {
                "height": 215,
              },
            ],
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "animationType": undefined,
        "onOrientationChange": [Function],
        "supportedOrientations": [
          "portrait",
          "landscape",
        ],
        "testID": "ios_modal",
        "transparent": true,
        "visible": false,
      },
      "type": "Modal",
    },
  ],
  "props": {
    "style": [
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "minHeight": 40,
        "width": "100%",
      },
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#949494",
      },
      false,
    ],
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`PickerSelect matches items by itemKey 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "editable": false,
                "multiline": true,
                "style": {
                  "color": "#1C1C1C",
                  "flex": 1,
                  "minWidth": 0,
                },
                "testID": "text_input",
                "value": "Option 2",
              },
              "type": "TextInput",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "style": {
                  "pointerEvents": "none",
                },
                "testID": "icon_container",
              },
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
              "pointerEvents": "box-only",
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "disabled": false,
        "onPress": [Function],
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
          "width": "100%",
        },
        "testID": "ios_touchable_wrapper",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": null,
          "props": {
            "aria-role": "button",
            "onPress": [Function],
            "style": {
              "flex": 1,
            },
            "testID": "ios_modal_top",
          },
          "type": "Pressable",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "style": {
                  "flexDirection": "row",
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        "Done",
                      ],
                      "props": {
                        "allowFontScaling": false,
                        "style": [
                          {
                            "color": "#007aff",
                            "fontSize": 17,
                            "fontWeight": "600",
                            "paddingRight": 11,
                            "paddingTop": 1,
                          },
                          {},
                        ],
                        "testID": "done_text",
                      },
                      "type": "Text",
                    },
                  ],
                  "props": {
                    "style": undefined,
                    "testID": "needed_for_touchable",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "hitSlop": {
                  "bottom": 4,
                  "left": 4,
                  "right": 4,
                  "top": 4,
                },
                "onPress": [Function],
                "onPressIn": [Function],
                "onPressOut": [Function],
                "testID": "done_button",
              },
              "type": "Pressable",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "backgroundColor": "#f8f8f8",
              "borderTopColor": "#dedede",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "height": 45,
              "justifyContent": "space-between",
              "paddingHorizontal": 10,
              "zIndex": 2,
            },
            "testID": "input_accessory_view",
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Select",
                    "value": "",
                  },
                  "type": "Picker.Item",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Option 1",
                    "value": "1",
                  },
                  "type": "Picker.Item",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Option 2",
                    "value": "2",
                  },
                  "type": "Picker.Item",
                },
              ],
              "props": {
                "onValueChange": [Function],
                "selectedValue": "2",
                "testID": "ios_picker",
              },
              "type": "Picker",
            },
          ],
          "props": {
            "style": [
              {
                "backgroundColor": "#d0d4da",
                "justifyContent": "center",
              },
              {
                "height": 215,
              },
            ],
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "animationType": undefined,
        "onOrientationChange": [Function],
        "supportedOrientations": [
          "portrait",
          "landscape",
        ],
        "testID": "ios_modal",
        "transparent": true,
        "visible": false,
      },
      "type": "Modal",
    },
  ],
  "props": {
    "style": [
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "minHeight": 40,
        "width": "100%",
      },
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#949494",
      },
      false,
    ],
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`PickerSelect renders custom InputAccessoryView 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "editable": false,
                "multiline": true,
                "style": {
                  "color": "#1C1C1C",
                  "flex": 1,
                  "minWidth": 0,
                },
                "testID": "text_input",
                "value": "Select an option",
              },
              "type": "TextInput",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "style": {
                  "pointerEvents": "none",
                },
                "testID": "icon_container",
              },
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
              "pointerEvents": "box-only",
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "disabled": false,
        "onPress": [Function],
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
          "width": "100%",
        },
        "testID": "ios_touchable_wrapper",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": null,
          "props": {
            "aria-role": "button",
            "onPress": [Function],
            "style": {
              "flex": 1,
            },
            "testID": "ios_modal_top",
          },
          "type": "Pressable",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Select an option",
                    "value": "",
                  },
                  "type": "Picker.Item",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Option 1",
                    "value": "1",
                  },
                  "type": "Picker.Item",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Option 2",
                    "value": "2",
                  },
                  "type": "Picker.Item",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Option 3",
                    "value": "3",
                  },
                  "type": "Picker.Item",
                },
              ],
              "props": {
                "onValueChange": [Function],
                "selectedValue": "",
                "testID": "ios_picker",
              },
              "type": "Picker",
            },
          ],
          "props": {
            "style": [
              {
                "backgroundColor": "#d0d4da",
                "justifyContent": "center",
              },
              {
                "height": 215,
              },
            ],
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "animationType": undefined,
        "onOrientationChange": [Function],
        "supportedOrientations": [
          "portrait",
          "landscape",
        ],
        "testID": "ios_modal",
        "transparent": true,
        "visible": false,
      },
      "type": "Modal",
    },
  ],
  "props": {
    "style": [
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "minHeight": 40,
        "width": "100%",
      },
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#949494",
      },
      false,
    ],
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`PickerSelect passes textInputProps to TextInput 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "editable": false,
                "multiline": true,
                "placeholder": "Custom placeholder",
                "style": {
                  "color": "#1C1C1C",
                  "flex": 1,
                  "minWidth": 0,
                },
                "testID": "text_input",
                "value": "Option 1",
              },
              "type": "TextInput",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "style": {
                  "pointerEvents": "none",
                },
                "testID": "icon_container",
              },
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
              "pointerEvents": "box-only",
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "disabled": false,
        "onPress": [Function],
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
          "width": "100%",
        },
        "testID": "ios_touchable_wrapper",
      },
      "type": "Pressable",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": null,
          "props": {
            "aria-role": "button",
            "onPress": [Function],
            "style": {
              "flex": 1,
            },
            "testID": "ios_modal_top",
          },
          "type": "Pressable",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "style": {
                  "flexDirection": "row",
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        "Done",
                      ],
                      "props": {
                        "allowFontScaling": false,
                        "style": [
                          {
                            "color": "#007aff",
                            "fontSize": 17,
                            "fontWeight": "600",
                            "paddingRight": 11,
                            "paddingTop": 1,
                          },
                          {},
                        ],
                        "testID": "done_text",
                      },
                      "type": "Text",
                    },
                  ],
                  "props": {
                    "style": undefined,
                    "testID": "needed_for_touchable",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "hitSlop": {
                  "bottom": 4,
                  "left": 4,
                  "right": 4,
                  "top": 4,
                },
                "onPress": [Function],
                "onPressIn": [Function],
                "onPressOut": [Function],
                "testID": "done_button",
              },
              "type": "Pressable",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "backgroundColor": "#f8f8f8",
              "borderTopColor": "#dedede",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "height": 45,
              "justifyContent": "space-between",
              "paddingHorizontal": 10,
              "zIndex": 2,
            },
            "testID": "input_accessory_view",
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Select an option",
                    "value": "",
                  },
                  "type": "Picker.Item",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Option 1",
                    "value": "1",
                  },
                  "type": "Picker.Item",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Option 2",
                    "value": "2",
                  },
                  "type": "Picker.Item",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": undefined,
                    "label": "Option 3",
                    "value": "3",
                  },
                  "type": "Picker.Item",
                },
              ],
              "props": {
                "onValueChange": [Function],
                "selectedValue": "1",
                "testID": "ios_picker",
              },
              "type": "Picker",
            },
          ],
          "props": {
            "style": [
              {
                "backgroundColor": "#d0d4da",
                "justifyContent": "center",
              },
              {
                "height": 215,
              },
            ],
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "animationType": undefined,
        "onOrientationChange": [Function],
        "supportedOrientations": [
          "portrait",
          "landscape",
        ],
        "testID": "ios_modal",
        "transparent": true,
        "visible": false,
      },
      "type": "Modal",
    },
  ],
  "props": {
    "style": [
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "minHeight": 40,
        "width": "100%",
      },
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#949494",
      },
      false,
    ],
    "testID": undefined,
  },
  "type": "View",
}
`;
